# discord-voicebot

./: CHANGELOG.md  README.md  bot.py  pyproject.toml  voicebot.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/: discord_voicebot@.service
src/discord_voicebot/: bot.py  util.py
src/voicebot/: __main__.py
tests/: test_bot.py  test_import.py  test_util.py
voicebot/: bot.py  util.py
