[project]
name = "voicebot"
version = "0.1.0"
description = "Discord bot that sends notifications whenever a user enters a voice channel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py[voice]>=2.5.2",
    "python-dotenv>=1.1.1",
]

[project.scripts]
voicebot = "voicebot.bot:main"

[project.urls]
Homepage = "https://github.com/IAmTheMitchell/voicebot"

[tool.setuptools.package-data]
voicebot = ["data/*.service"]